--- a/ReactApp/ReactJSWebApp/ReactJSWebApp/ReactJSWebApp.csproj
+++ b/ReactApp/ReactJSWebApp/ReactJSWebApp/ReactJSWebApp.csproj
@@ -83,6 +83,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="app.jsx" />
     <Content Include="bower_components\babel-standalone\babel.js" />
     <Content Include="bower_components\babel-standalone\babel.min.js" />
     <Content Include="bower_components\react\react-dom-server.js" />
@@ -94,7 +95,10 @@
     <Content Include="bower_components\react\react.js" />
     <Content Include="bower_components\react\react.min.js" />
     <Content Include="index.html" />
+    <Content Include="menu.jsx" />
+    <Content Include="test.html" />
     <Content Include="Web.config" />
+    <Content Include="wireup.jsx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
